--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
 name: henkin_places
-description: A new Flutter project.
+description: Um armazenador de locais feito por Bruno Henrique Kinast
 
 # The following line prevents the package from being accidentally published to
 # pub.dev using `pub publish`. This is preferred for private packages.
